# Ninja

Ninja/: CMakeLists.txt  LICENSE  Ninja_Auto_App.qmlproject  Ninja_Auto_App.qmlproject.qtds  README.md  main.qml  qmlmodules
Ninja/content/: App.qml  Screen01.ui.qml
Ninja/imports/: CMakeLists.txt
Ninja/imports/Ninja_Auto_App/: CMakeLists.txt  qmldir
Ninja/imports/Ninja_Auto_App/designer/: plugin.metainfo
Ninja/src/: import_qml_plugins.h
